Fix contact spacing to custom and sub font-sizes

--- a/app/sass/components/_contact.scss
+++ b/app/sass/components/_contact.scss
@@ -2,7 +2,9 @@
   display: flex;
   align-items: center;
   column-gap: 1.5rem;
-  padding: 1rem;
+  padding-top: 21px;
+	padding-bottom: 22px;
+	padding-left: 1rem;
   padding-right: 1.5rem;
   color: $gray-900;
   text-decoration: none;
@@ -24,14 +26,12 @@
 
   &-time {
     grid-column: 7 / 8;
-    font-size: 0.8rem;
     color: #6c757d;
     opacity: 0.5;
   }
 
   &-status {
     grid-column: 1 / -1;
-    font-size: 0.8rem;
     color: $gray-600;
     overflow: hidden;
     white-space: nowrap;
